Fix placeholder text color and sort order

--- a/Journal Core Data/Journal Core Data/View/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/View/Base.lproj/Main.storyboard
@@ -105,6 +105,7 @@
                                             <segment title="😐"/>
                                             <segment title="🙂"/>
                                         </segments>
+                                        <color key="tintColor" red="0.08235294118" green="0.4941176471" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="77a-Va-XxU">
                                         <rect key="frame" x="0.0" y="36" width="343" height="30"/>
