--- a/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                     <outlet property="bodyLabel" destination="JdP-o1-Voo" id="tFo-Qk-aaj"/>
                                     <outlet property="timestampLabel" destination="2K6-iI-xWe" id="x6j-dE-ELn"/>
                                     <outlet property="titleLabel" destination="Rep-P5-rcs" id="QSr-c6-AOc"/>
-                                    <segue destination="OTH-Uz-A6G" kind="show" identifier="CellSegue" id="fX1-a2-dO2"/>
+                                    <segue destination="OTH-Uz-A6G" kind="show" identifier="EntryCellSegue" id="fX1-a2-dO2"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
