bodyLabel font style changed from meduim to regular

--- a/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdP-o1-Voo">
                                                     <rect key="frame" x="0.0" y="27" width="343" height="21.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
