--- a/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
             </objects>
             <point key="canvasLocation" x="732" y="138.98050974512745"/>
         </scene>
-        <!--Title-->
+        <!--Add Entry-->
         <scene sceneID="tOe-6S-cGd">
             <objects>
                 <viewController id="eVm-W4-91x" customClass="EntryDetailViewController" customModule="Journal_CoreData" customModuleProvider="target" sceneMemberID="viewController">
@@ -122,7 +122,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eCI-6s-8Hx"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="xgu-gM-DFm">
+                    <navigationItem key="navigationItem" title="Add Entry" id="xgu-gM-DFm">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="5PV-Sf-PW5">
                             <connections>
                                 <action selector="save:" destination="eVm-W4-91x" id="XCP-Ba-eeV"/>
