--- a/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/View/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                                         <segments>
                                             <segment title="😔"/>
                                             <segment title="🙂"/>
-                                            <segment title="😔"/>
+                                            <segment title="😁"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u4A-5l-t2e">
