detil view controller set up

--- a/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
+++ b/Journal CoreData/Journal CoreData/Base.lproj/Main.storyboard
@@ -138,6 +138,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentControl" destination="ptg-DD-GDA" id="zai-JD-lJi"/>
                         <outlet property="textView" destination="n75-ui-jrL" id="Zse-6O-tS3"/>
                         <outlet property="titleTextField" destination="6NK-no-afp" id="bVR-bN-AbI"/>
                     </connections>
